--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vahem",
   "version": "1.0.0",
-  "description": "A js library to help you write minimum code by importing predefined code",
-  "main": "index.js",
+  "description": "A js library to help write code faster by importing predefined functions",
+  "main": "lib/index.js",
   "scripts": {
     "test": "jest"
   },
   "author": "Fawaz Sullia",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "jest": "^27.4.5",
     "typescript": "^4.5.5"
