--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest"
   },
+  "type" : "module",                          
   "author": "Fawaz Sullia",
   "license": "MIT",
   "dependencies": {
